deploy.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: arquetipojava
  name: arquetipojava 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arquetipojava
  template:
    metadata:
      labels:
        app: arquetipojava 
    spec:
      containers:
      - name: arquetipojava
        image: israelmorales1507/arquetipojava:0.0.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arquetipojava
  name: arquetipojava
spec:
  #type: LoadBalancer
  ports:
  - port: 30000
    protocol: TCP
    targetPort: 8090
  selector:
    app: arquetipojava
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: arquetiponodejs
  name: arquetiponodejs 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arquetiponodejs
  template:
    metadata:
      labels:
        app: arquetiponodejs 
    spec:
      containers:
      - name: arquetiponodejs
        image: israelmorales1507/arquetiponodejs:0.0.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: arquetiponodejs
  name: arquetiponodejs
spec:
  #type: LoadBalancer
  ports:
  - port: 9100
    protocol: TCP
    targetPort: 3001
  selector:
    app: arquetiponodejs
